Added preprocessor directive to Release build

--- a/Editor/AGS.Editor/AGSEditorLib.csproj
+++ b/Editor/AGS.Editor/AGSEditorLib.csproj
@@ -11,6 +11,10 @@
     <DefineConstants>TRACE;NO_GUI</DefineConstants>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>TRACE;NO_GUI</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Resources\*.ico" />
   </ItemGroup>
